[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymls"
version = "0.0.1"
authors = [
  { name="Peter Metz", email="pmetz1@utk.edu" },
]
description = "Python implementation of the dislocation contrast factor calculation described by Martinez-Garcia, Leoni, and Scardi."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: TBD",
    "Operating System :: OS Independent",
]
# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"